added shortname/dcat:keyword to mergedView and mergedClassEditor